# agents

./: CLAUDE.md
.beads/: issues.jsonl
.claude-plugin/: marketplace.json
plugins/beads-workflows/: CLI-WARNINGS-DESIGN.md  ENFORCEMENT-TEST-RESULTS.md  README.md  plugin.json
plugins/beads-workflows/agents/: beads-disciplinarian.md  beads-issue-reviewer.md  beads-prompt-integrator.md  beads-workflow-orchestrator.md
plugins/beads-workflows/commands/: beads-dependency-add.md  beads-issue-create.md  beads-session-end.md  beads-session-start.md  project-init.md
plugins/beads-workflows/lib/agent_tracking/: README.md  agent_tracking.go  session.go  stats.go
plugins/beads-workflows/skills/beads-cli-reference/: SKILL.md
plugins/beads-workflows/skills/dependency-thinking/: SKILL.md
plugins/beads-workflows/skills/description-quality/: SKILL.md
plugins/beads-workflows/skills/session-rituals/: SKILL.md
plugins/beads-workflows/skills/single-issue-discipline/: SKILL.md
plugins/beads-workflows/templates/: CLAUDE.template.md  initial-issues.schema.json
plugins/beads-workflows/templates/go/: .gitignore  Makefile  Makefile.template  initial-issues.json
plugins/beads-workflows/templates/python/: .gitignore  initial-issues.json  pyproject.toml  pyproject.toml.template
plugins/beads-workflows/templates/standard/: .gitignore  README.template.md  initial-issues.json
plugins/beads-workflows/templates/typescript/: .gitignore  initial-issues.json  package.json  package.json.template  tsconfig.json.template
